# bangi-backend

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  env-ci  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pr-pipelines.yaml
apps/web/: index.js
infra/: core.Dockerfile
migrations/: 001_initial_migration.py  001_initial_schema.py  002_track_postback_table.py  003_created_at_timestamp_for_all_tables.py  004_campaign_table_cost_model_value_currency.py  005_facebook_autoregs_module.py  005_report_leads.py  006_campaign_flow_action_and_postback_fields.py  006_campaign_status_mapper_and_postback_fields.py  006_click_id_binary.py  007_flow_name.py  conf.py
perf/: README.md  mixed_workload.js  run_k6.sh  seed.py  single_endpoint.js
src/: api.py  blueprint.py  container.py  peewee.py
src/auth/: __init__.py  decorators.py  routes.py  services.py
src/core/: constants.py  db.py  entities.py  enums.py  exceptions.py  logging.py  models.py  routes.py  schemas.py  services.py  supervisor.py  utils.py
src/facebook_autoregs/: entities.py  exceptions.py  routes.py  schemas.py  services.py
src/facebook_pacs/: entities.py  exceptions.py  routes.py  schemas.py  services.py
src/health/: routes.py
src/reports/: entities.py  enums.py  exceptions.py  repositories.py  routes.py  schemas.py  services.py  workers.py
src/tracker/: entities.py  enums.py  routes.py  schemas.py  services.py
tests/: conftest.py
tests/fixtures/: db.py  entities.py  payloads.py  utils.py
tests/integration/: conftest.py  test_auth.py  test_health.py
(+37 files in other folders)
